z-index fix

--- a/src/components/slider/style.module.scss
+++ b/src/components/slider/style.module.scss
@@ -5,6 +5,7 @@
     position: relative;
     background-color: white;
     z-index: 1;
+    padding-bottom: 100px;
     overflow: hidden;
 
     .slider{
