--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,7 +1,6 @@
 .circleContainer{
     position: relative;
-    z-index: 10;
-
+    z-index: 1;
     .circle{
         height: 1550%;
         width: 120vw;
